ingress/3-nginx-blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue
  namspace: nginx-blue
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    run: nginx-blue
