ingress/3-nginx-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-green
  namspace: nginx-green
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    run: nginx-green
