ingress/3-nginx-red-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-red
  namespace: nginx-red
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    run: nginx-red
